# Selenium-Tests-Kitsune

./: .gitignore  pyproject.toml  pytest.ini
.github/workflows/: selenium-grd.yml
core/: base_page.py  test_utilities.py
docker/: docker-compose.yml
messages/: contribute_page_messages.py  homepage_messages.py
pages/: contribute_page.py  footer.py  homepage.py  pages.py  top_navbar.py
test/: conftest.py  test_homepage.py
